--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,17 @@
 
 .col-md-4{
   border: 1px solid #000;
+  width: 300px;
+  height: 300px;
+}
+
+h1 {
+  font-size: 170px;
+  text-align: center;
+  margin-top: 26%;
+}
+
+button{
+  margin-top: 5%;
+margin-left: 35%;
 }
